@@ -1,3 +1,8 @@
+2004-07-31  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbglib.c: setlocale parameter was changed. 
+	LC_CTYPE and LC_MESSAGES are set not LC_ALL.
+
 2004-07-24  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* tests/test-glib2.rb: Removed ^M. Pointed out by Laurent Sansonetti.
